--- a/client/index.html
+++ b/client/index.html
@@ -4,17 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-signin-client_id" content="100223138447-0l1p5706na5dub7baisptu7gbm9bl0fc.apps.googleusercontent.com">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Mini Wordpress</title>
 </head>
 <body>
     <div id="app">
-        <nav class="sticky-top d-flex justify-content-around" id="navbarAtas">
+        <div id="awal" v-if="!isLogin && !isRegister && !logged" style="display: flex; align-items: center; justify-content: center">
+            <div style="text-align:center">
+                <h1 style="color:white; font-size: 90px"><img src="./assets/pokemon-png-3.png" alt="" style="height:80px;"> Mini Wordpress</h1>
+                <br>
+                <button class="btn btn-dark btn-lg" type="submit" style="margin-left:20px" @click.prevent="isLogin = true">Login</button>
+                <button class="btn btn-dark btn-lg" type="submit" style="margin-left:20px" @click.prevent="isRegister = true">Register</button>
+            </div>
+        </div>
+        <div id="form-register" v-if="!isLogin && isRegister" style="display: flex; align-items: center;">
+            <div class="container-fluid" style="display: flex; justify-content: center;">
+                    <div class="card text-center" style="width:550px" style="">
+                        <div class="form-group mb-2">
+                            <br>
+                            <h1><b>Register</b></h1>
+                            <center>
+                                <br>
+                                <input type="text" class="form-control" style="width:500px;" placeholder="User Name" name="userName" id="userNameregis" required v-model="user.userName">
+                                <br>
+                                <input type="email" class="form-control" style="width:500px;" placeholder="Email" name="email" id="emailregis" required v-model="user.email">
+                                <br>
+                                <input type="password" class="form-control" style="width:500px;" placeholder="Password" name="password" id="passwordregis" required v-model="user.password">
+                                <br>
+                            </center>
+                            <div style="display: flex; justify-content: center">
+                                <button class="btn btn-dark" type="submit" style="margin-right:15px" @click.prevent="register">Register</button>
+                                <button class="btn btn-dark" type="submit" @click.prevent="isRegister = false">Cancel</button>
+                            </div>
+                            <br>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <div id="form-login" v-if="isLogin && !isRegister" style="display: flex; align-items: center;">
+            <div class="container-fluid" style="display: flex; justify-content: center;">
+                    <div class="card text-center" style="width:550px" style="">
+                        <div class="form-group mb-2">
+                            <br>
+                            <h1><b>Login</b></h1>
+                            <center>
+                                <br>
+                                <input type="email" class="form-control" style="width:500px;" placeholder="Email" name="email" id="emaillogin" required v-model="user.email">
+                                <br>
+                                <input type="password" class="form-control" style="width:500px;" placeholder="Password" name="password" id="passwordlogin" required v-model="user.password">
+                                <br>
+                            </center>
+                            <div style="display: flex; justify-content: center">
+                                <button class="btn btn-dark" type="submit" style="margin-right:15px" @click.prevent="login">Login</button>
+                                <button class="btn btn-dark" type="submit" @click.prevent="isLogin = false">Cancel</button>
+                            </div>
+                            Or 
+                            <button class="g-signin2" style="margin-top:15px" data-onsuccess="onSignIn"></button>
+                            <br>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <div id='website' v-if="logged">
+            <nav class="sticky-top d-flex justify-content-around" id="navbarAtas">
             <div id="logo">
-                <img src="https://scontent-sea1-1.cdninstagram.com/vp/9fb6549e2c697cdca87489f05ea0a1dd/5D705334/t51.2885-19/s150x150/55778917_621877284951923_2049740062177886208_n.jpg?_nc_ht=scontent-sea1-1.cdninstagram.com" alt="Logo">
+                <img src="./assets/1.jpg" 
+                alt="Logo">
                 <a href="/"> Mini Wordpress</a>
             </div>
             <div class="navbar">
@@ -24,74 +82,77 @@
                 </form>
             </div>
             <div id="navUser">
-                <a href="#editor"><button type="button" class="btn btn-white" id="write">Write +</button></a>
-                <a href=""><i class="fas fa-user-circle" id="userIcon"></i></a>
+                <button type="button" class="btn btn-white" id="write" @click.prevent="clear(), writeNew = true, home = false, readArticle = false, editArtc = false">Write +</button>
+                <!-- <i class="fas fa-user-circle" id="userIcon"></i> -->
+                <button class="btn-primary" style="width:100px; height:30px; font-size:15px" @click.prevent="signOut">Logout</button>
             </div>
-        </nav>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-2" id="sidebar">
-                    <h4 class="d-flex justify-content-center" style="color:darkblue; font-size:35px; padding-top: 10px">Options</h4>
-                    <ul class="" id="liSidebar">
-                        <li><a href="#artcilesList"><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px" @click.prevent="articlesLists">Articles List</button></a></li>
-                        <li><a href=""><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px">Option</button></a></li>
-                        <li><a href=""><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px">Option</button></a></li>
-                    </ul>
-                    <br><br>
-                    <!-- <ul class="article" id="sidebarList">
-                        <li><h3>Menu Articles</h3></li>
-                        <li v-for="article in articles"><h4><a href="">{{article.title}}</a></h4></li>
-                    </ul> -->
-                </div>
-                <div class="col-md-10 offset-2">
-                        <div class="search">
-                            <h1>{{notFounds}}</h1>
-                        </div>
-                        <div class="row" id="artcilesList">
-                            <div class="col-4" v-for="article in articles" :key="article._id">
-                                <div class="card text-center" style="width: 18rem; margin-top:15px;">
-                                    <img v-bind:src="article.img" class="card-img-top" alt="Article Image">
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{article.title}}</h5>
-                                        <p class="card-text">{{article.content}}</p>
-                                        <p class="card-text"><small class="text-muted">Created At {{article.created_at}}</small></p>
-                                        <a href="" class="btn btn-primary" @click.prevent="readMoress(article._id)" style="margin-bottom: 5px">Read More</a><br>
-                                        <a href="" class="btn btn-secondary" @click.prevent="editArticle(article._id)">Edit</a>
-                                        <a href="" class="btn btn-danger" @click.prevent="deleteArticle(article._id)">Delete</a>
+            </nav>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2" id="sidebar">
+                        <h4 class="d-flex justify-content-center" style="color:darkblue; font-size:35px; padding-top: 10px">Options</h4>
+                        <ul class="" id="liSidebar">
+                            <li><a href="#artcilesList"><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px" @click.prevent="articlesLists(), home = true, readArticle = false, writeNew = false">Articles List</button></a></li>
+                            <li><a href=""><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px">Option</button></a></li>
+                            <li><a href=""><button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top:20px">Option</button></a></li>
+                        </ul>
+                        <br><br>
+                        <!-- <ul class="article" id="sidebarList">
+                            <li><h3>Menu Articles</h3></li>
+                            <li v-for="article in articles"><h4><a href="">{{article.title}}</a></h4></li>
+                        </ul> -->
+                    </div>
+                    <div class="col-md-10 offset-2">
+                            <div class="search" v-if="notFound">
+                                <h1>{{notFounds}}</h1>
+                            </div>
+                            <div class="row" id="artcilesList" v-if="home">
+                                <div class="col-4" v-for="article in articles" :key="article._id">
+                                    <div class="card text-center" style="width: 18rem; margin-top:15px;">
+                                        <img v-bind:src="article.img" class="card-img-top" alt="Article Image">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{article.title}}</h5>
+                                            <p class="card-text">{{article.content}}</p>
+                                            <p class="card-text"><small class="text-muted">Created At {{article.created_at}}</small></p>
+                                            <a href="" class="btn btn-primary" @click.prevent="readMoress(article._id), readArticle = true, home = false" style="margin-bottom: 5px">Read More</a><br>
+                                            <a href="" class="btn btn-secondary" @click.prevent="editArticle(article._id), home = false, writeNew = true">Edit</a>
+                                            <a href="" class="btn btn-danger" @click.prevent="deleteArticle(article._id)">Delete</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="isiArticle">
-                            <h1 style="text-align: center">{{addArticle.title}}</h1>
-                            <!-- <img :src="addArticle.img" alt="Article Image" style="width:100%; height:500px"> -->
-                            <p><small>Created At : {{addArticle.created_at}}</small></p>
-                            <p><i>{{addArticle.content}}</i></p>
-                        </div>
-                        <div id="editor">
-                            <form>
-                                <h1>Write Something</h1>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="" placeholder="Need Title.." v-model="addArticle.title"><br>
-                                    <textarea name="" id="" cols="80" rows="10" class="form-control" placeholder="Content" v-model="addArticle.content"></textarea>
-                                    <!-- <textarea name="editor1" id="editor1" rows="10" cols="80" v-model="addArticle.content"></textarea> -->
-                                </div>
-                                <a href=""><button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px" @click.prevent="addArticleToDB()" v-if="editArtc == false">Add Article</button></a>
-                                <a href=""><button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px" @click.prevent="editArticleToDB(addArticle._id)" v-if="editArtc == true">Edit Article</button></a>
-                                <a href=""><button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px">Cancel</button></a>
-                            </form>
-                        </div>
+                            <div class="isiArticle" style="display: flex; align-items: center; flex-direction: column" v-if="readArticle">
+                                <h1 style="text-align: center">{{addArticle.title}}</h1>
+                                <img :src="addArticle.img" alt="Article Image" style="width:80%; height:400px;">
+                                <p><small>Created At : {{addArticle.created_at}}</small></p>
+                                <p><i>{{addArticle.content}}</i></p>
+                            </div>
+                            <div id="editor" v-if="writeNew">
+                                <form>
+                                    <h1>Write Something</h1>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="" placeholder="Need Title.." v-model="addArticle.title"><br>
+                                        <textarea name="" id="" cols="80" rows="10" class="form-control" placeholder="Content" v-model="addArticle.content"></textarea>
+                                        <!-- <textarea name="editor1" id="editor1" rows="10" cols="80" v-model="addArticle.content"></textarea> -->
+                                    </div>
+                                    <button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px" @click.prevent="addArticleToDB()" v-if="editArtc == false">Add Article</button>
+                                    <button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px" @click.prevent="editArticleToDB(addArticle.id), writeNew = false, home = true" v-if="editArtc == true">Edit Article</button>
+                                    <button type="button" class="btn btn-primary" style="margin-top:20px; margin-right:10px" @click.prevent="writeNew = false, home = true">Cancel</button>
+                                </form>
+                            </div>
+                    </div>
                 </div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="footer">
-                    <p>Copyright 2019 @rudyfebrianthomas</p>
+                <br><br>
+                <div class="row">
+                    <div class="footer">
+                        <p>Copyright 2019 @rudyfebrianthomas</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
