revisi edit content

--- a/client/index.html
+++ b/client/index.html
@@ -181,7 +181,7 @@
                             </form>
                         </div>
                     </div>
-                    <div id="updateArticlePage" class="col-sm-12 p-5" style="display: none" v-if="showHide.updateArticlePage" style='overflow-y: scroll'>
+                    <div id="updateArticlePage" class="col-sm-12 p-5" style="display: none" v-show="showHide.updateArticlePage" style='overflow-y: scroll'>
                         <div class="d-flex flex-column">
                             <h5>Edit Your Article</h5>
                             <form>
